--- a/rent.html
+++ b/rent.html
@@ -4,13 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!--=============== REMIX ICONS ===============-->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-
-    <!--=============== SWIPER CSS ===============-->
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
-
     <link rel="shortcut icon" href="assets/assets/Front-Black.png" type="image/x-icon" class="favicon">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/normalize.css">
@@ -22,7 +17,7 @@
 </head>
 
 <body>
-    <!--==================== HEADER ====================-->
+
     <header class="header" id="header">
         <nav class="nav container">
             <a href="" class="nav__logo">
@@ -81,18 +76,20 @@
                 </div>
 
                 <div class="about__data">
-                    <h2 class="section__title about__title">Rent HERE on-line: Just subscribe and rent<br>Rent personaly in our Bogota's offices</h2>
-                    <p class="about__description"> Here you can choose a car, days to use it, and the way pay<br> City, mountain, dessert, forest or coast?</p>
+                    <h2 class="section__title about__title">Rent HERE on-line: Just subscribe and rent<br>Rent personaly
+                        in our Bogota's offices</h2>
+                    <p class="about__description"> Here you can choose a car, days to use it, and the way pay<br> City,
+                        mountain, dessert, forest or coast?</p>
 
                     <a href="registration.html" class="button">Subscribe</a>
                 </div>
             </div>
         </section>
-            <div class="home__social">
-                <a href="#" class="home__social-icon"><i class="ri-facebook-fill"></i></a>
-                <a href="#" class="home__social-icon"><i class="ri-instagram-fill"></i></a>
-                <a href="#" class="home__social-icon"><i class="ri-twitter-fill"></i></a>
-            </div>
+        <div class="home__social">
+            <a href="#" class="home__social-icon"><i class="ri-facebook-fill"></i></a>
+            <a href="#" class="home__social-icon"><i class="ri-instagram-fill"></i></a>
+            <a href="#" class="home__social-icon"><i class="ri-twitter-fill"></i></a>
+        </div>
 
         </section>
 
@@ -130,10 +127,11 @@
                             <p>Picanto</p>
                             <img src="assets/img/Front-Black.png">
                             <p class="precio"><span class="u-pull-right ">$150 us</span></p>
-                            <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar Al Carrito</a>
+                            <a href="#" class="u-full-width button-primary button input agregar-carrito"
+                                data-id="1">Agregar Al Carrito</a>
                         </div>
                     </div>
-                </div>  
+                </div>
                 <div class="row">
                     <div class="four columns">
                         <div class="card">
@@ -142,10 +140,11 @@
                                 <p>HBi20</p>
                                 <img src="assets/img/hyundai-hb20-blue-show.png">
                                 <p class="precio"><span class="u-pull-right ">$150 us</span></p>
-                                <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="2">Agregar Al Carrito</a>
+                                <a href="#" class="u-full-width button-primary button input agregar-carrito"
+                                    data-id="2">Agregar Al Carrito</a>
                             </div>
                         </div>
-                    </div>  
+                    </div>
                     <div class="row">
                         <div class="four columns">
                             <div class="card">
@@ -154,45 +153,49 @@
                                     <p>i20 Sedan</p>
                                     <img src="assets/img/hyundai-i20-sidefront.show.png">
                                     <p class="precio"><span class="u-pull-right ">$180 us</span></p>
-                                    <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="3">Agregar Al Carrito</a>
+                                    <a href="#" class="u-full-width button-primary button input agregar-carrito"
+                                        data-id="3">Agregar Al Carrito</a>
                                 </div>
                             </div>
-                        </div>  
-                <div class="four columns">
-                    <div class="card">
-                        <div class="info-card">
-                            <h4>Kia</h4>
-                            <p>Rio</p>
-                            <img src="assets/img/Rio-blue-side.png">
-                            <p class="precio"><span class="u-pull-right ">$180</span></p>
-                            <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="4">Agregar Al Carrito</a>
+                        </div>
+                        <div class="four columns">
+                            <div class="card">
+                                <div class="info-card">
+                                    <h4>Kia</h4>
+                                    <p>Rio</p>
+                                    <img src="assets/img/Rio-blue-side.png">
+                                    <p class="precio"><span class="u-pull-right ">$180</span></p>
+                                    <a href="#" class="u-full-width button-primary button input agregar-carrito"
+                                        data-id="4">Agregar Al Carrito</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="four columns">
+                            <div class="card">
+                                <div class="info-card">
+                                    <h4>Hyundai</h4>
+                                    <p>Tucson</p>
+                                    <img src="assets/img/r2.jpg">
+                                    <p class="precio"><span class="u-pull-right ">$280</span></p>
+                                    <a href="#" class="u-full-width button-primary button input agregar-carrito"
+                                        data-id="5">Agregar Al Carrito</a>
+                                </div>
+                            </div> <!--.card-->
+                        </div>
+                        <div class="four columns">
+                            <div class="card">
+                                <div class="info-card">
+                                    <h4>Kia</h4>
+                                    <p>Sportage</p>
+                                    <img src="assets/img/kia_spo_54.png">
+                                    <p class="precio"><span class="u-pull-right ">$280</span></p>
+                                    <a href="#" class="u-full-width button-primary button input agregar-carrito"
+                                        data-id="6">Agregar Al Carrito</a>
+                                </div>
+                            </div> <!--.card-->
                         </div>
                     </div>
                 </div>
-                <div class="four columns">
-                    <div class="card">
-                        <div class="info-card">
-                            <h4>Hyundai</h4>
-                            <p>Tucson</p>
-                            <img src="assets/img/r2.jpg">
-                            <p class="precio"><span class="u-pull-right ">$280</span></p>
-                            <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="5">Agregar Al Carrito</a>
-                        </div>
-                    </div> <!--.card-->
-                </div>
-                <div class="four columns">
-                    <div class="card">
-                        <div class="info-card">
-                            <h4>Kia</h4>
-                            <p>Sportage</p>
-                            <img src="assets/img/kia_spo_54.png">
-                            <p class="precio"><span class="u-pull-right ">$280</span></p>
-                            <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="6">Agregar Al Carrito</a>
-                        </div>
-                    </div> <!--.card-->
-                </div>
-            </div>
-        </div>
 
     </main>
     <hr>
@@ -288,7 +291,8 @@
             </div>
         </div>
         <span class="footer__copy">
-            &#169; <a target="_blank" href="https://nietodeveloper.github.io/Briefcase/" class="footer__dev-link">Created by Nieto Software Developer</a>
+            &#169; <a target="_blank" href="https://nietodeveloper.github.io/Briefcase/"
+                class="footer__dev-link">Created by Nieto Software Developer</a>
             <p>®Copyrights2024</p>
             <p id="date"></p>
         </span>
@@ -313,4 +317,5 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/app.js"></script>
 </body>
+
 </html>
