--- a/registration.html
+++ b/registration.html
@@ -3,15 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <link rel="shortcut icon" href="assets/img/Front-Black.png" type="image/x-icon" class="favicon">
-    <!--=============== REMIX ICONS ===============-->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-
-    <!--=============== SWIPER CSS ===============-->
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
-
-    <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/skeleton.css">
@@ -23,7 +19,7 @@
 </head>
 
 <body>
-    <!--==================== HEADER ====================-->
+
     <header class="header" id="header">
         <nav class="nav container">
             <a href="" class="nav__logo">
@@ -53,7 +49,6 @@
                 </div>
             </div>
 
-            <!-- Togglar Button -->
             <div class="nav__toggle" id="nav-toggle">
                 <i class="ri-menu-line"></i>
             </div>
@@ -61,10 +56,8 @@
         </nav>
     </header>
 
-    <!--************* MAIN CODE ****************-->
-
     <main class="main">
-        <!--==================== GALLERY BANNER ====================-->
+
         <section class="gallery section">
             <div class="gallery__container container grid">
                 <video class="video__slide active" src="assets/video/vid_3.mp4" autoplay muted loop></video>
@@ -138,7 +131,6 @@
         <hr>
         <hr>
 
-        <!--==================== OFFER ====================-->
         <section class="offer section">
 
             <div class="offer__container container grid">
@@ -161,7 +153,6 @@
         </section>
     </main>
 
-    <!--==================== FOOTER ====================-->
     <footer class="footer section">
         <div class="shapeX shape__big"></div>
         <div class="shapeX shape__small"></div>
@@ -250,16 +241,10 @@
     <a href="" class="scrollup" id="scroll-up">
         <i class="ri-arrow-up-s-line"></i>
     </a>
-
-
-    <!--=============== SCROLL REVEAL - PAGE ANNIMATION ===============-->
+    >
     <script src="assets/js/scrollrevealAnimation.min.js"></script>
-    <!--=============== SWIPER JS - PRODUCT SLIDER ===============-->
     <script src="/assets/js/swiper-bundle.min.js"></script>
-    <!--=============== MIXITUP JS - FILTER PRODUCT ===============-->
     <script src="assets/js/mixitup.min.js"></script>
-
-    <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
     <script src="assets/js/data_validation.js"></script>
 
