--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <!--=============== REMIX ICONS ===============-->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-
-    <!--=============== SWIPER CSS ===============-->
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
-
-    <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/skeleton.css">
@@ -22,7 +18,7 @@
 </head>
 
 <body>
-    <!--==================== HEADER ====================-->
+
     <header class="header" id="header">
         <nav class="nav container">
             <a href="" class="nav__logo">
@@ -52,7 +48,6 @@
                 </div>
             </div>
 
-            <!-- Togglar Button -->
             <div class="nav__toggle" id="nav-toggle">
                 <i class="ri-menu-line"></i>
             </div>
@@ -60,10 +55,8 @@
         </nav>
     </header>
 
-    <!--************* MAIN CODE ****************-->
-
     <main class="main">
-        <!--==================== GALLERY BANNER ====================-->
+
         <section class="gallery section">
             <div class="gallery__container container grid">
                 <video class="video__slide active" src="assets/video/vid_4.mp4" autoplay muted loop></video>
@@ -98,7 +91,7 @@
             </div>
 
         </section>
-        <!--==================== OFFER ====================-->
+
         <section class="offer section">
 
             <div class="offer__container container grid">
@@ -173,7 +166,6 @@
         </section>
     </main>
 
-    <!--==================== FOOTER ====================-->
     <footer class="footer section">
         <div class="shapeX shape__big"></div>
         <div class="shapeX shape__small"></div>
@@ -263,16 +255,9 @@
         <i class="ri-arrow-up-s-line"></i>
     </a>
 
-    <!--=============== SWIPER JS - PRODUCT SLIDER ===============-->
     <script src="/assets/js/swiper-bundle.min.js"></script>
-
-    <!--=============== SCROLL REVEAL - PAGE ANNIMATION ===============-->
     <script src="assets/js/scrollrevealAnimation.min.js"></script>
-
-    <!--=============== MIXITUP JS - FILTER PRODUCT ===============-->
     <script src="assets/js/mixitup.min.js"></script>
-
-    <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
 
 
