--- a/about.html
+++ b/about.html
@@ -390,6 +390,10 @@
             <p id="date"></p>
         </span>
 
+        <a href="" class="scrollup" id="scroll-up">
+            <i class="ri-arrow-up-s-line"></i>
+        </a>
+
     </footer>
 
     <a href="" class="scrollup" id="scroll-up">
