--- a/registration.html
+++ b/registration.html
@@ -235,6 +235,9 @@
             <p>®Copyrights2024</p>
             <p id="date"></p>
         </span>
+        <a href="" class="scrollup" id="scroll-up">
+            <i class="ri-arrow-up-s-line"></i>
+        </a>
 
     </footer>
 
