--- a/index.html
+++ b/index.html
@@ -367,6 +367,10 @@
             <p id="date"></p>
         </span>
 
+        <a href="" class="scrollup" id="scroll-up">
+            <i class="ri-arrow-up-s-line"></i>
+        </a>
+
     </footer>
 
     <a href="" class="scrollup" id="scroll-up">
