--- a/index.html
+++ b/index.html
@@ -332,13 +332,13 @@
                         <a href="#" class="footer__links">Cost</a>
                     </li>
                     <li>
-                        <a href="#" class="footer__links">Reserves</a>
+                        <a href="#" class="footer__links">Reserve</a>
                     </li>
                     <li>
                         <a href="#" class="footer__links">Contact us</a>
                     </li>
                     <li>
-                        <a href="#" class="footer__links">Services</a>
+                        <a href="#" class="footer__links">Rent</a>
                     </li>
 
                 </ul>
