--- a/registration.html
+++ b/registration.html
@@ -144,7 +144,7 @@
 
                     <p class="offer__description">Receive all the information about our
                         products and new cars by email by subscribing to our
-                        mailing list.</p>
+                        mailing list</p>
 
                     <a href="rent.html" class="button">Rent</a>
                 </div>
@@ -166,7 +166,7 @@
                 <p class="footer__description">
                     We offer the best cars of <br>
                     the most recognized brands in <br>
-                    the world.
+                    the world
                 </p>
             </div>
 
