--- a/registration.html
+++ b/registration.html
@@ -143,7 +143,7 @@
                     </h2>
 
                     <p class="offer__description">Receive all the information about our
-                        products and new cars by email by subscribing to our
+                        services and cars by email
                         mailing list</p>
 
                     <a href="rent.html" class="button">Rent</a>
