--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
-    <title>Nieto Rent a Car</title>
+    <title>Nieto Rent Car</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="" class="nav__logo">
-                Nieto Rent a Car
+                Nieto Rent Car
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
