--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="" class="nav__logo">
-                Nieto Rent a Car Bogota
+                Nieto Rent Car Bogota
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -69,7 +69,7 @@
             <div class="home__container container grid">
                 <div class="home__data">
                     <h1 class="home__title">
-                        Rent a Nieto Car
+                        Nieto Rent Car
                     </h1>
                     <h2 class="home__subtitle">
                         Kia Picanto
