--- a/rent.html
+++ b/rent.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
-    <title>Nieto Rent a Car</title>
+    <title>Nieto Rent Car Bogota</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="" class="nav__logo">
-                Nieto Rent a Car
+                Nieto Rent Car Bogota
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -68,7 +68,7 @@
                     <img src="assets/img/Sportage-back.png" alt="" class="about__img">
 
                     <div class="about__card">
-                        <h3 class="about__card-title">Rent a Car for Colombian geography</h3>
+                        <h3 class="about__card-title">Rent Section</h3>
                     </div>
                 </div>
 
