--- a/registration.html
+++ b/registration.html
@@ -1,4 +1,4 @@
-!<html lang="en">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/data_validation.css">
 
-    <title>Nieto Rent a Car</title>
+    <title>Nieto Rent Car Bogota</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="" class="nav__logo">
-                Nieto Rent a Car
+                Nieto Rent Car Bogota
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -70,8 +70,8 @@
                     <img src="assets/img/tucson-front-half.png" alt="" class="about__img">
 
                     <div class="about__card">
-                        <h3 class="about__card-title">Register and Rent On Line</h3>
-                        <p class="about__card-description">Easy and Secure</p>
+                        <h3 class="about__card-title">Register Section</h3>
+                        <p class="about__card-description">Or Reserve</p>
                     </div>
                 </div>
 
@@ -244,7 +244,7 @@
     <a href="" class="scrollup" id="scroll-up">
         <i class="ri-arrow-up-s-line"></i>
     </a>
-    >
+    
     <script src="assets/js/scrollrevealAnimation.min.js"></script>
     <script src="/assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/mixitup.min.js"></script>
