--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
-    <title>Nieto Rent Car</title>
+    <title>Nieto Rent Car Bogota</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="" class="nav__logo">
-                Nieto Rent Car
+                Nieto Rent Car Bogota
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -67,8 +67,8 @@
                     <img src="assets/img/picanto-xline.png" alt="" class="about__img">
 
                     <div class="about__card">
-                        <h3 class="about__card-title">About us</h3>
-                        <p class="about__card-description">We Rent Confortables Vehicles</p>
+                        <h3 class="about__card-title">About Section</h3>
+                        <p class="about__card-description">Confortables Vehicles</p>
                     </div>
                 </div>
 
