--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
 
-    <title>Nieto Rent Car</title>
+    <title>Nieto Rent Car Bogota</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="" class="nav__logo">
-                Nieto Rent Car
+                Nieto Rent Car Bogota
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -70,7 +70,7 @@
                     <img src="assets/img/Car-13.webp" alt="" class="about__img">
 
                     <div class="about__card">
-                        <h3 class="about__card-title">Contact Nieto Rent a Car</h3>
+                        <h3 class="about__card-title">Contact Section</h3>
                     </div>
                 </div>
 
