--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>Nieto Rent Car Bogota</title>
+    <title>Rent Car Bogota</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="" class="nav__logo">
-                Nieto Rent Car Bogota
+                Rent Car Bogota
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
@@ -68,7 +68,7 @@
             <div class="home__container container grid">
                 <div class="home__data">
                     <h1 class="home__title">
-                        Nieto Rent Car
+                        Rent Car
                     </h1>
                     <h2 class="home__subtitle">
                         Kia Picanto
