--- a/rent.html
+++ b/rent.html
@@ -73,10 +73,10 @@
                 </div>
 
                 <div class="about__data">
-                    <h2 class="section__title about__title">Rent HERE on-line: Just subscribe and rent<br>Rent personaly
+                    <h2 class="section__title about__title">Rent HERE: Just subscribe and rent<br>Rent personaly
                         in our Bogota's offices</h2>
                     <p class="about__description"> Here you can choose a car, days to use it, and the way pay<br> City,
-                        mountain, dessert, forest or coast?</p>
+                        mountain, dessert, forest or coast? </p>
 
                     <a href="registration.html" class="button">Subscribe</a>
                 </div>
