--- a/registration.html
+++ b/registration.html
@@ -145,7 +145,7 @@
 
                     <p class="offer__description">Receive all the information about our
                         services and cars by email
-                        mailing list</p>
+                        mailing list.</p>
 
                     <a href="rent.html" class="button">Rent</a>
                 </div>
