--- a/about.html
+++ b/about.html
@@ -318,7 +318,7 @@
                     Nieto Rent a Car
                 </a>
                 <p class="footer__description">
-                    We offer the best cars of <br>
+                    We offer the best Cars of <br>
                     the most recognized brands in <br>
                     the world.
                 </p>
