--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
                     <h2 class="section__title about__title">We are based in Bogota, Colombia<br>Contact us</h2>
                     <p class="about__description">See the future with high-performance Gas cars produced by
                         renowned brands. They feature futuristic builds and designs with
-                        new and innovative platforms that last a long time.</p>
+                        new and innovative platforms that last a long time</p>
 
                     <a href="about.html" class="button">Know More</a>
                 </div>
