--- a/about.html
+++ b/about.html
@@ -384,7 +384,7 @@
             </div>
         </div>
         <span class="footer__copy">
-            &#169; <a target="_blank" href="https://nietodeveloper.github.io/Briefcase/"
+            &#169; <a target="_blank" href="https://manuelnieto.netlify.app/"
                 class="footer__dev-link">Created by Nieto Software Developer</a>
             <p>®Copyrights2024</p>
             <p id="date"></p>
